# truncatednsd

./: .gitignore  CMakeLists.txt  README.markdown
src/: config.c  log.c  sandbox.c  truncatednsd.c  truncatednsd.h
test/: runinetd.c
